Studyapp 4.4.1.5: Forum: Padding issue for "Post Discussion" and "Save as Draft" buttons on small screens. #869619

--- a/mobileapp.css
+++ b/mobileapp.css
@@ -1200,6 +1200,16 @@ body.scheme-dark .mma-forumng-posts-list-wrapper .mma-forumng-post-reply .mma-fo
     display: inline;
 }
 
+@media (max-width: 400px) {
+    .mma-forumng-add-discussion .mma-forumng-group-button ion-row {
+        display: flex;
+    }
+
+    .mma-forumng-add-discussion .mma-forumng-group-button ion-col:last-child {
+        flex: 1 1 100%;
+    }
+}
+
 .mma-forumng-discussion-list .mma-forumng-discussion .mma-forumng-discussion-subject,
 .mma-forumng-discussion-list .mma-forumng-drafts .cell.c0 {
     font-size: 1rem;
